tests/js/invalid/import/only-top-level.buri
func = (b) =>
    import a from "hello.buri"
    b